glucose-java-demo-stream/glucose-java-demo-stream/k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: caresync-glucose-reactive-svc
  namespace: caresync
  labels:
    app: caresync-glucose-reactive
spec:
  selector:
    app: caresync-glucose-reactive
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
    - name: actuator
      port: 8081
      targetPort: actuator
      protocol: TCP
  type: ClusterIP
