glucose-java-demo-stream/glucose-java-demo-stream/k8s/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: caresync-ingress
  namespace: caresync
  labels:
    app: caresync-glucose-reactive
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"   # SSE longue durée
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"        # SSE sans buffer
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.caresync.be
      secretName: caresync-tls
  rules:
    - host: api.caresync.be
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: caresync-glucose-reactive-svc
                port:
                  name: http
